@@ -26,6 +26,19 @@ local function ChatButton_OnEnter(self, ...)
 		UIFrameFadeIn(self.parent, 0.2, self.parent:GetAlpha(), 1)
 		UIFrameFadeIn(self, 0.2, self:GetAlpha(), 1)
 	end
+
+	if self == LeftChatToggleButton then
+		GameTooltip:SetOwner(self, 'ANCHOR_TOPLEFT', 0, 4)
+		GameTooltip:ClearLines()
+		GameTooltip:AddDoubleLine(L['Left Click:'], L['Toggle Chat Frame'], 1, 1, 1)
+	else
+		GameTooltip:SetOwner(self, 'ANCHOR_TOPRIGHT', 0, 4)
+		GameTooltip:ClearLines()
+		GameTooltip:AddDoubleLine(L['Left Click:'], L['Toggle Chat Frame'], 1, 1, 1)
+		GameTooltip:AddDoubleLine(L['Right Click:'], L['Toggle Embedded Addon'], 1, 1, 1)
+	end
+
+	GameTooltip:Show()
 end
 
 local function ChatButton_OnLeave(self, ...)
@@ -34,18 +47,30 @@ local function ChatButton_OnLeave(self, ...)
 		UIFrameFadeOut(self, 0.2, self:GetAlpha(), 0)
 		self.parent.fadeInfo.finishedFunc = self.parent.fadeFunc
 	end
+	GameTooltip:Hide()
 end
 
-local function ChatButton_OnClick(self, ...)
-	if E.db[self.parent:GetName()..'Faded'] then
-		E.db[self.parent:GetName()..'Faded'] = nil
-		UIFrameFadeIn(self.parent, 0.2, self.parent:GetAlpha(), 1)
-		UIFrameFadeIn(self, 0.2, self:GetAlpha(), 1)
+local function ChatButton_OnClick(self, btn)
+	GameTooltip:Hide()
+	if btn == 'RightButton' then
+		if IsAddOnLoaded('Recount') and E.db.skins.embedRight == 'Recount' then
+			ToggleFrame(Recount_MainWindow)
+		elseif IsAddOnLoaded('Omen') and E.db.skins.embedRight == 'Omen' then
+			ToggleFrame(OmenAnchor)
+		elseif IsAddOnLoaded('Skada') and E.db.skins.embedRight == 'Skada' then
+			Skada:ToggleWindow()
+		end
 	else
-		E.db[self.parent:GetName()..'Faded'] = true
-		UIFrameFadeOut(self.parent, 0.2, self.parent:GetAlpha(), 0)
-		UIFrameFadeOut(self, 0.2, self:GetAlpha(), 0)
-		self.parent.fadeInfo.finishedFunc = self.parent.fadeFunc
+		if E.db[self.parent:GetName()..'Faded'] then
+			E.db[self.parent:GetName()..'Faded'] = nil
+			UIFrameFadeIn(self.parent, 0.2, self.parent:GetAlpha(), 1)
+			UIFrameFadeIn(self, 0.2, self:GetAlpha(), 1)
+		else
+			E.db[self.parent:GetName()..'Faded'] = true
+			UIFrameFadeOut(self.parent, 0.2, self.parent:GetAlpha(), 0)
+			UIFrameFadeOut(self, 0.2, self:GetAlpha(), 0)
+			self.parent.fadeInfo.finishedFunc = self.parent.fadeFunc
+		end
 	end
 end
 
@@ -192,6 +217,7 @@ function LO:CreateChatPanels()
 	rchattb:Point('TOPLEFT', rchatdp, 'TOPRIGHT', 1, 0)
 	rchattb:Point('BOTTOMRIGHT', rchat, 'BOTTOMRIGHT', -5, 5)
 	rchattb:SetTemplate('Default', true)
+	rchattb:RegisterForClicks('AnyUp')
 	rchattb:SetScript('OnEnter', ChatButton_OnEnter)
 	rchattb:SetScript('OnLeave', ChatButton_OnLeave)
 	rchattb:SetScript('OnClick', ChatButton_OnClick)
