@@ -713,3 +713,7 @@ L['Profile Binds'] = true;
 L['Save your keybinds with your ElvUI profile. That way if you have the dual spec feature enabled in ElvUI you can swap keybinds with your specs.'] = true;
 L['Rest Icon'] = true;
 L['Display the rested icon on the unitframe.'] = true;
+L['Left Click:'] = true;
+L['Right Click:'] = true;
+L['Toggle Chat Frame'] = true;
+L['Toggle Embedded Addon'] = true;
